i was in the wrong directory when i staged changes for previous commit